# Sportstracker

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HSL-sekvenssikaavio.md  monopoli.md
src/: UI.py  activities_UI.py  activities_commands.py  build.py  config.py  database.db  db.py  edit_activities_UI.py  edit_activities_ui.py  index.py  login_UI.py  new_activities_UI.py  new_activities_ui.py  register_UI.py  sportstracker_UI.py  sql_commands.py  users_commands.py
src/backend/: activities_commands.py  db.py  users_commands.py
src/tests/: activities_commands_test.py  build_test.py  index_test.py  sql_commands_test.py  users_commands_test.py
src/ui/: UI.py  edit_activities_ui.py  login_UI.py  new_activities_ui.py  register_UI.py  sportstracker_UI.py
